Fixed font size in text area to avoid zooming in on mobiles.

--- a/src/css/styles1.css
+++ b/src/css/styles1.css
@@ -321,6 +321,6 @@ li {
       margin-left: 15px;
     }
 
-    input {
+    input, textarea {
       font-size: 16px;
     }
